[package]
name = "n2tinject"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.5"
cortex-m = "0.7.7"
critical-section = "1.2.0"
defmt = "0.3"
defmt-rtt = "0.4"
defmt-test = "0.3.1"
embedded-hal = "1.0.0"
heapless = {version = "0.8.0", default-features = false,features = ["portable-atomic-critical-section", "defmt-03"]}
once_cell = { version = "1.19.0", default-features = false, features = ["critical-section"] }
panic-halt = "1.0.0"
rp2040-hal = {version = "0.11.0", features = ["critical-section-impl", "defmt", "rt", "i2c-write-iter"]}
usb-device = "0.3.2"
usbd-serial = "0.2.2"
rp2040-boot2 = "0.3.0"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[[bin]]
name = "n2tinject"
path = "src/main.rs"
test = false
doctest = false
bench = false
